updated working files

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
 				<br/>
 				<br/>
 				<button type="button" id="start" class="bton btn-success">Start</button>
-				<button type="button" id="reset" class="bton btn-primary">Reset</button>
+				<button type="button" id="restart" class="bton btn-primary">Restart</button>
 			</div>
 			<div class="col-lg-7">
 				<div class="row">
-					<div id="random-score" class="col-sm-8"></div>
+					<div id="random-score" class="col-sm-8">Goal: </div>
 					<div class="col-sm-4 tally">
-						<p id="win-count">Wins:</p>
-						<br/>
-						<p id="loss-count">Losses:</p>
+						<p>Wins: <div id="win-count"></div></p>
+						<p>Losses: <div id="loss-count"></div></p>
 					</div>
 				</div>
 				<div class="row">
@@ -52,7 +51,7 @@
 					<button id="button-4" class="btn btn-default"><img src="./assets/images/red_gem.jpg" class="gem-pic"></button>
 				</div>
 				<div class="row">
-					<p id="total-score">Your total score is: </p> 
+					<p>Your total score is: <div id="total-score"></div></p> 
 				</div>
 				<div id="gem-total" class="row"></div>
 			</div>
